# fuzzychains

./: .gitignore  CMakeLists.txt  README.md  build.sh  runme.sh  transformOutput.R  transformResults.sh
apps/: CMakeLists.txt  main.cpp  unittest_BitwiseFuzzyChain_goedel.cpp  unittest_BitwiseFuzzyChain_goguen.cpp  unittest_BitwiseFuzzyChain_lukasiewicz.cpp  unittest_FloatSimdFuzzyChain.cpp  unittest_SimdFuzzyChain.cpp  unittest_VectorFuzzyChain.cpp
include/: AlignedAllocator.h  BitsetNumChain.h  BitwiseFuzzyChain.h  FloatSimdFuzzyChain.h  SimdFuzzyChain.h  VectorFuzzyChain.h  common.h
src/: BitsetNumChain.cpp  BitwiseFuzzyChain.cpp  CMakeLists.txt  VectorFuzzyChain.cpp
